--- a/package.json
+++ b/package.json
@@ -31,9 +31,6 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/forms": "^0.5.7",
-    "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -57,9 +54,15 @@
   },
   "scripts": {
     "start": "vite",
+    "mock-api": "node mock-server/server.js",
+    "dev": "npm run mock-api & npm run start",
     "build": "vite build",
     "build:debug": "vite build --sourcemap",
     "serve": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:ci": "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings=0",
@@ -90,6 +93,9 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/line-clamp": "^0.1.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.14",
     "@types/react-dom": "^19.1.9",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -102,11 +108,14 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "postcss": "8.4.8",
+    "jsdom": "^27.0.0",
+    "json-server": "^0.17.4",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "3.4.6",
     "typescript": "~5.5.4",
-    "vite": "5.0.0",
-    "vite-tsconfig-paths": "3.6.0"
+    "vite": "^5.4.20",
+    "vite-tsconfig-paths": "3.6.0",
+    "vitest": "^3.2.4"
   }
 }
